Mise en place de toutes les pages + composants + config Spring + premier Manager + quelques entités

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>jstl</artifactId>
+		<version>1.2</version>
+	</dependency>
+
 		<!-- Jakarta Commons -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
