--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,18 @@
 	<name>SuiviRecette</name>
 	<description>Struts 2 Starter</description>
 
+	<parent>
+		<groupId>fr.gfi.forge</groupId>
+		<artifactId>java</artifactId>
+		<version>4.1.10</version>
+		<relativePath />
+	</parent>
+
 	<properties>
 		<struts2.version>2.3.16.3</struts2.version>
 		<struts2-jquery.version>3.7.1</struts2-jquery.version>
 		<spring.version>3.0.5.RELEASE</spring.version>
+		<apache.poi.version>3.11</apache.poi.version>
 		<mysql-version>5.1.34</mysql-version>
 		<hibernate-version>3.2.6.GA</hibernate-version>
 		<hibernate-annotations-version>3.3.1.GA</hibernate-annotations-version>
@@ -143,6 +151,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>${apache.poi.version}</version>
 		</dependency>
 	</dependencies>
 
